2024-01-19T08:20:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7581211723 # 37
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-19
* notice: last 14d: unq all: 137 219
* notice: prev accum: outdated-unq outdated-all / unq all: 2317 6271 / 2487 6489
* notice: next accum: outdated-unq outdated-all / unq all: 2317 6271 / 2488 6490
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-19]

2024-01-19T01:14:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7578090398 # 36
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-19
* notice: last 14d: unq all: 137 218
* notice: prev accum: outdated-unq outdated-all / unq all: 2317 6271 / 2480 6479
* notice: next accum: outdated-unq outdated-all / unq all: 2317 6271 / 2487 6489
* notice: prev exec diff / last date diff / accum: unq all: +7 +10 -0 -0 / +17 +22 -0 -0 / 17 22
* notice: removed / changed dates: [] / [2024-01-18]

2024-01-18T16:21:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7572921034 # 35
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
* notice: last 14d: unq all: 130 208
* notice: prev accum: outdated-unq outdated-all / unq all: 2317 6271 / 2471 6468
* notice: next accum: outdated-unq outdated-all / unq all: 2317 6271 / 2480 6479
* notice: prev exec diff / last date diff / accum: unq all: +9 +11 -0 -0 / +10 +12 -0 -0 / 10 12
* notice: removed / changed dates: [] / [2024-01-18]

2024-01-18T08:20:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7567171967 # 34