@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-07T08:19:29Z",
-  "count" : 11,
-  "count_minmax" : [ 11, 11 ],
-  "count_decinc" : [ -0, +11 ],
-  "uniques" : 10,
-  "uniques_minmax" : [ 10, 10 ],
-  "uniques_decinc" : [ -0, +10 ]
+  "timestamp" : "2024-01-19T16:21:19Z",
+  "count" : 10,
+  "count_minmax" : [ 10, 11 ],
+  "count_decinc" : [ -1, +11 ],
+  "uniques" : 9,
+  "uniques_minmax" : [ 9, 10 ],
+  "uniques_decinc" : [ -1, +10 ]
 }
