@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-01-19T08:20:55Z",
+  "timestamp" : "2024-01-19T16:21:19Z",
   "count_outdated" : 6271,
   "uniques_outdated" : 2317,
-  "count" : 6490,
-  "uniques" : 2488,
+  "count" : 6513,
+  "uniques" : 2504,
   "clones" : [
     {
       "timestamp": "2024-01-05T00:00:00Z",
-      "count": 11,
-      "count_minmax": [ 11, 11 ],
-      "count_decinc": [ 0, 11 ],
-      "uniques": 10,
-      "uniques_minmax": [ 10, 10 ],
-      "uniques_decinc": [ 0, 10 ]
+      "count": 10,
+      "count_minmax": [ 10, 11 ],
+      "count_decinc": [ 1, 11 ],
+      "uniques": 9,
+      "uniques_minmax": [ 9, 10 ],
+      "uniques_decinc": [ 1, 10 ]
     },
     {
       "timestamp": "2024-01-06T00:00:00Z",
@@ -133,12 +133,12 @@
     },
     {
       "timestamp": "2024-01-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 24,
+      "count_minmax": [ 1, 24 ],
+      "count_decinc": [ 0, 24 ],
+      "uniques": 17,
+      "uniques_minmax": [ 1, 17 ],
+      "uniques_decinc": [ 0, 17 ]
     }
   ]
 }
