@@ -1,3 +1,12 @@
+2024-01-19T16:21:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7586401040 # 38
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-19
+* notice: last 14d: unq all: 149 241
+* notice: prev accum: outdated-unq outdated-all / unq all: 2317 6271 / 2488 6490
+* notice: next accum: outdated-unq outdated-all / unq all: 2317 6271 / 2504 6513
+* notice: prev exec diff / last date diff / accum: unq all: +16 +23 -1 -1 / +17 +24 -0 -0 / 17 24
+* notice: removed / changed dates: [] / [2024-01-05 2024-01-19]
+
 2024-01-19T08:20:55Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7581211723 # 37
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-19
